few dark mode fixes and change in routes

--- a/src/dfinance_frontend/src/index.scss
+++ b/src/dfinance_frontend/src/index.scss
@@ -45,7 +45,6 @@ body{
     position: relative;
     display: inline-block;
     padding: 0.5rem 1rem;
-    color:#2a1f9d;
     text-decoration: none;
     transition: color 0.3s ease;
   }
